[package]
name = "geomac"
version = "0.1.0"
edition = "2024"
authors = ["voiboost"]
build = "build.rs"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.9", features = [
    "json",
    "rustls-tls",
], default-features = false }
chrono = "0.4.38"
clap = { version = "4.5.23", features = ["derive"] }
flate2 = "1.0.35"
futures = "0.3.31"
protobuf = "3.7.1"
regex = "1.11.1"
roxmltree = "0.20.0"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
lazy_static = "1.5.0"
spinners = "4.1.1"
itertools = "0.13.0"

[build-dependencies]
protobuf-codegen = "3.7.1"
